openshift/templates/clamav/allow-clamav-cross-namespace-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-clamav-cross-namespace
  namespace: e8b9ad-tools
spec:
  podSelector:
    matchLabels:
      app: lup-clamav
  ingress:
    - ports:
        - protocol: TCP
          port: 3310
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: e8b9ad-dev
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: e8b9ad-test
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: e8b9ad-prod
  policyTypes:
    - Ingress
